--- a/people.html
+++ b/people.html
@@ -1,15 +1,15 @@
 <h1 class="theory">Staff</h1>
 
 <div class="photos">
-	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"></a><br>David Corfield</div>
-	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"></a><br>Ross Duncan</div>
-	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~pbl"><img src="photos/levy.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~parkerdx/"><img src="photos/parker.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/ritter.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"></a><br></div>
-	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"></a><br></div>
+	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"></a><br>Benedikt Ahrens</div>
+	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"></a><br>Martin Escardo</div>
+	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"></a><br>Dan Ghica</div>
+	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"></a><br>Achim Jung</div>
+	<div><a href="http://www.cs.bham.ac.uk/~pbl"><img src="photos/levy.jpg"></a><br>Paul Levy</div>
+	<div><a href="http://www.cs.bham.ac.uk/~parkerdx/"><img src="photos/parker.jpg"></a><br>Dave Parker</div>
+	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"></a><br>Uday Reddy</div>
+	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/ritter.jpg"></a><br>Eike Ritter</div>
+	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"></a><br>Jamie Vicary</div>
+	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"></a><br>Steve Vickers</div>
+	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"></a><br>Noam Zeilberger</div>
 </div>
