--- a/people.html
+++ b/people.html
@@ -10,6 +10,52 @@
 	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"></a><br>Uday Reddy</div>
 	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/ritter.jpg"></a><br>Eike Ritter</div>
 	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"></a><br>Jamie Vicary</div>
-	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"></a><br>Steve Vickers</div>
 	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"></a><br>Noam Zeilberger</div>
+</div>
+
+<h1 class="theory">Researchers</h1>
+
+<div class="photos">
+	<div><a href="http://www.cs.bham.ac.uk/~devesasm/"><img src="photos/campos.jpg"></a><br>Marco Devesos Campos</div>
+	<div><a href="http://ericfinster.github.io/"><img src="photos/finster.jpg"></a><br>Eric Finster</div>
+	<div><a href="http://www.cs.bham.ac.uk/~ais523/"><img src="photos/smith.jpg"></a><br>Alex Smith</div>
+</div>
+
+<h1 class="theory">Honorary research fellows</h1>
+
+<div class="photos">
+	<div><a href="https://hoelzl.fr/"><img src="photos/holzl.jpg"></a><br>Rupert Hőlzl</div>
+	<div><a href="https://paigenorth.github.io/"><img src="photos/north.jpg"></a><br>Paige North</div>
+	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"></a><br>Valeria de Paiva</div>
+	<div><a href="https://www.swansea.ac.uk/staff/science/computer-science/paulya/"><img src="photos/pauly.jpg"></a><br>Arno Pauly</div>
+	<div><a href="https://ni.www.techfak.uni-bielefeld.de/people/maschroe"><img src="photos/schroder.jpg"></a><br>Matthias Schrőder</div>
+	<div><a href="https://floriansteinberg.github.io/"><img src="photos/steinberg.jpg"></a><br>Florian Steinberg</div>
+	<div><a href="https://www.paultaylor.eu/"><img src="photos/taylor.jpg"></a><br>Paul Taylor</div>
+	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"></a><br>Steve Vickers</div>
+</div>
+
+<h1 class="theory">PhD students</h1>
+
+<div class="photos">
+	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/ambridge.jpg"></a><br>Todd Ambridge</div>
+	<div><a href="http://www.rntz.net/"><img src="photos/arntzenius.jpg"></a><br>Michael Arntzenius</div>
+	<div><a href=""><img src="photos/blanco.jpg"></a><br>Nicolas Blanco</div>
+	<div><a href="http://www.cs.bham.ac.uk/~abb538/"><img src="photos/booij.jpg"></a><br>Auke Booij</div>
+	<div><a href="http://www.cs.bham.ac.uk/~wtc488/"><img src="photos/cheung.jpg"></a><br>Steven Cheung</div>
+	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/feng.jpg"></a><br>Yuning Feng</div>
+	<div><a href="https://bram.xyz/blog/"><img src="photos/geron.jpg"></a><br>Bram Geron</div>
+	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.jpg"></a><br>Thomas Goodman</div>
+	<div><a href="https://www.cs.bham.ac.uk/~sxh617/"><img src="photos/hazratpour.jpg"></a><br>Sina Hazratpour</div>
+	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"></a><br>Tom de Jong</div>
+	<div><a href=""><img src="photos/ng.jpg"></a><br>Ming Ng</div>
+	<div><a href=""><img src="photos/suarez.jpg"></a><br>Anna Laura Suarez</div>
+</div>
+
+<h1 class="theory">Past members</h1>
+
+<div class="photos">
+	<div><a href="https://kam.mff.cuni.cz/~jaklt/"><img src="photos/jakl.jpg"></a><br>Tomáš Jakl</div>
+	<div><a href="https://www.cs.bham.ac.uk/~cmk497/"><img src="photos/knapp.jpg"></a><br>Cory Knapp</div>
+	<div><a href=""><img src="photos/jia.jpg"></a><br>Xiaodong Jia</div>
+	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"></a><br>Koko Muroya</div>
 </div>
