--- a/people.html
+++ b/people.html
@@ -1,14 +1,14 @@
 <h1 class="theory">Staff</h1>
 
 <div class="photos">
-	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"></a><br>Benedikt Ahrens</div>
+	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"><br>Benedikt Ahrens</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"></a><br>Martin Escardo</div>
 	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"></a><br>Dan Ghica</div>
 	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"></a><br>Achim Jung</div>
 	<div><a href="http://www.cs.bham.ac.uk/~pbl"><img src="photos/levy.jpg"></a><br>Paul Levy</div>
 	<div><a href="http://www.cs.bham.ac.uk/~parkerdx/"><img src="photos/parker.jpg"></a><br>Dave Parker</div>
 	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"></a><br>Uday Reddy</div>
-	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/ritter.jpg"></a><br>Eike Ritter</div>
+	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/placeholder.jpg"></a><br>Eike Ritter</div>
 	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"></a><br>Jamie Vicary</div>
 	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"></a><br>Noam Zeilberger</div>
 </div>
@@ -16,16 +16,16 @@
 <h1 class="theory">Researchers</h1>
 
 <div class="photos">
-	<div><a href="http://www.cs.bham.ac.uk/~devesasm/"><img src="photos/campos.jpg"></a><br>Marco Devesos Campos</div>
+	<div><a href="http://www.cs.bham.ac.uk/~devesasm/"><img src="photos/placeholder.jpg"></a><br>Marco Devesos Campos</div>
 	<div><a href="http://ericfinster.github.io/"><img src="photos/finster.jpg"></a><br>Eric Finster</div>
-	<div><a href="http://www.cs.bham.ac.uk/~ais523/"><img src="photos/smith.jpg"></a><br>Alex Smith</div>
+	<div><a href="http://www.cs.bham.ac.uk/~ais523/"><img src="photos/placeholder.jpg"></a><br>Alex Smith</div>
 </div>
 
 <h1 class="theory">Honorary research fellows</h1>
 
 <div class="photos">
 	<div><a href="https://hoelzl.fr/"><img src="photos/holzl.jpg"></a><br>Rupert Hőlzl</div>
-	<div><a href="https://paigenorth.github.io/"><img src="photos/north.jpg"></a><br>Paige North</div>
+	<div><a href="https://paigenorth.github.io/"><img src="photos/placeholder.jpg"></a><br>Paige North</div>
 	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"></a><br>Valeria de Paiva</div>
 	<div><a href="https://www.swansea.ac.uk/staff/science/computer-science/paulya/"><img src="photos/pauly.jpg"></a><br>Arno Pauly</div>
 	<div><a href="https://ni.www.techfak.uni-bielefeld.de/people/maschroe"><img src="photos/schroder.jpg"></a><br>Matthias Schrőder</div>
@@ -39,7 +39,7 @@
 <div class="photos">
 	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/ambridge.jpg"></a><br>Todd Ambridge</div>
 	<div><a href="http://www.rntz.net/"><img src="photos/arntzenius.jpg"></a><br>Michael Arntzenius</div>
-	<div><a href=""><img src="photos/blanco.jpg"></a><br>Nicolas Blanco</div>
+	<div><img src="photos/blanco.jpg"><br>Nicolas Blanco</div>
 	<div><a href="http://www.cs.bham.ac.uk/~abb538/"><img src="photos/booij.jpg"></a><br>Auke Booij</div>
 	<div><a href="http://www.cs.bham.ac.uk/~wtc488/"><img src="photos/cheung.jpg"></a><br>Steven Cheung</div>
 	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/feng.jpg"></a><br>Yuning Feng</div>
@@ -47,7 +47,7 @@
 	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.jpg"></a><br>Thomas Goodman</div>
 	<div><a href="https://www.cs.bham.ac.uk/~sxh617/"><img src="photos/hazratpour.jpg"></a><br>Sina Hazratpour</div>
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"></a><br>Tom de Jong</div>
-	<div><a href=""><img src="photos/ng.jpg"></a><br>Ming Ng</div>
+	<div><a href="https://www.cs.bham.ac.uk/people/Ming%20Ng"><img src="photos/ng.jpg"></a><br>Ming Ng</div>
 	<div><a href=""><img src="photos/suarez.jpg"></a><br>Anna Laura Suarez</div>
 </div>
 
