--- a/people.html
+++ b/people.html
@@ -2,60 +2,60 @@
 
 <div class="photos">
 	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"><br>Benedikt Ahrens</a></div>
-	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"></a><br>Martin Escardo</div>
-	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"></a><br>Dan Ghica</div>
-	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"></a><br>Achim Jung</div>
-	<div><a href="http://www.cs.bham.ac.uk/~pbl"><img src="photos/levy.jpg"></a><br>Paul Levy</div>
-	<div><a href="http://www.cs.bham.ac.uk/~parkerdx/"><img src="photos/parker.jpg"></a><br>Dave Parker</div>
-	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"></a><br>Uday Reddy</div>
-	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/placeholder.jpg"></a><br>Eike Ritter</div>
-	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"></a><br>Jamie Vicary</div>
-	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"></a><br>Noam Zeilberger</div>
+	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"><br>Martin Escardo</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"><br>Dan Ghica</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"><br>Achim Jung</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~pbl"><img src="photos/levy.jpg"><br>Paul Levy</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~parkerdx/"><img src="photos/parker.jpg"><br>Dave Parker</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"><br>Uday Reddy</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/placeholder.jpg"><br>Eike Ritter</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"><br>Jamie Vicary</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"><br>Noam Zeilberger</a></div>
 </div>
 
 <h1 class="theory">Researchers</h1>
 
 <div class="photos">
-	<div><a href="http://www.cs.bham.ac.uk/~devesasm/"><img src="photos/placeholder.jpg"></a><br>Marco Devesos Campos</div>
-	<div><a href="http://ericfinster.github.io/"><img src="photos/finster.jpg"></a><br>Eric Finster</div>
-	<div><a href="http://www.cs.bham.ac.uk/~ais523/"><img src="photos/placeholder.jpg"></a><br>Alex Smith</div>
+	<div><a href="http://www.cs.bham.ac.uk/~devesasm/"><img src="photos/placeholder.jpg"><br>Marco Devesos Campos</a></div>
+	<div><a href="http://ericfinster.github.io/"><img src="photos/finster.jpg"><br>Eric Finster</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~ais523/"><img src="photos/placeholder.jpg"><br>Alex Smith</a></div>
 </div>
 
 <h1 class="theory">Honorary research fellows</h1>
 
 <div class="photos">
-	<div><a href="https://hoelzl.fr/"><img src="photos/holzl.jpg"></a><br>Rupert Hőlzl</div>
-	<div><a href="https://paigenorth.github.io/"><img src="photos/placeholder.jpg"></a><br>Paige North</div>
-	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"></a><br>Valeria de Paiva</div>
-	<div><a href="https://www.swansea.ac.uk/staff/science/computer-science/paulya/"><img src="photos/pauly.jpg"></a><br>Arno Pauly</div>
-	<div><a href="https://ni.www.techfak.uni-bielefeld.de/people/maschroe"><img src="photos/schroder.jpg"></a><br>Matthias Schrőder</div>
-	<div><a href="https://floriansteinberg.github.io/"><img src="photos/steinberg.jpg"></a><br>Florian Steinberg</div>
-	<div><a href="https://www.paultaylor.eu/"><img src="photos/taylor.jpg"></a><br>Paul Taylor</div>
-	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"></a><br>Steve Vickers</div>
+	<div><a href="https://hoelzl.fr/"><img src="photos/holzl.jpg"><br>Rupert Hőlzl</a></div>
+	<div><a href="https://paigenorth.github.io/"><img src="photos/placeholder.jpg"><br>Paige North</a></div>
+	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"><br>Valeria de Paiva</a></div>
+	<div><a href="https://www.swansea.ac.uk/staff/science/computer-science/paulya/"><img src="photos/pauly.jpg"><br>Arno Pauly</a></div>
+	<div><a href="https://ni.www.techfak.uni-bielefeld.de/people/maschroe"><img src="photos/schroder.jpg"><br>Matthias Schrőder</a></div>
+	<div><a href="https://floriansteinberg.github.io/"><img src="photos/steinberg.jpg"><br>Florian Steinberg</a></div>
+	<div><a href="https://www.paultaylor.eu/"><img src="photos/taylor.jpg"><br>Paul Taylor</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"><br>Steve Vickers</a></div>
 </div>
 
 <h1 class="theory">PhD students</h1>
 
 <div class="photos">
-	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/ambridge.jpg"></a><br>Todd Ambridge</div>
-	<div><a href="http://www.rntz.net/"><img src="photos/arntzenius.jpg"></a><br>Michael Arntzenius</div>
-	<div><img src="photos/blanco.jpg"><br>Nicolas Blanco</div>
-	<div><a href="http://www.cs.bham.ac.uk/~abb538/"><img src="photos/booij.jpg"></a><br>Auke Booij</div>
-	<div><a href="http://www.cs.bham.ac.uk/~wtc488/"><img src="photos/cheung.jpg"></a><br>Steven Cheung</div>
-	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/feng.jpg"></a><br>Yuning Feng</div>
-	<div><a href="https://bram.xyz/blog/"><img src="photos/geron.jpg"></a><br>Bram Geron</div>
-	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.jpg"></a><br>Thomas Goodman</div>
-	<div><a href="https://www.cs.bham.ac.uk/~sxh617/"><img src="photos/hazratpour.jpg"></a><br>Sina Hazratpour</div>
-	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"></a><br>Tom de Jong</div>
-	<div><a href="https://www.cs.bham.ac.uk/people/Ming%20Ng"><img src="photos/ng.jpg"></a><br>Ming Ng</div>
-	<div><a href=""><img src="photos/suarez.jpg"></a><br>Anna Laura Suarez</div>
+	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/placeholder.jpg"><br>Todd Ambridge</a></div>
+	<div><a href="http://www.rntz.net/"><img src="photos/placeholder.jpg"><br>Michael Arntzenius</a></div>
+	<div><img src="photos/placeholder.jpg"><br>Nicolas Blanco</div>
+	<div><a href="http://www.cs.bham.ac.uk/~abb538/"><img src="photos/placeholder.jpg"><br>Auke Booij</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~wtc488/"><img src="photos/placeholder.jpg"><br>Steven Cheung</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/placeholder.jpg"><br>Yuning Feng</a></div>
+	<div><a href="https://bram.xyz/blog/"><img src="photos/geron.jpg"><br>Bram Geron</a></div>
+	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/placeholder.jpg"><br>Thomas Goodman</a></div>
+	<div><a href="https://www.cs.bham.ac.uk/~sxh617/"><img src="photos/placeholder.jpg"><br>Sina Hazratpour</a></div>
+	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
+	<div><a href="https://www.cs.bham.ac.uk/people/Ming%20Ng"><img src="photos/placeholder.jpg"><br>Ming Ng</a></div>
+	<div><a href=""><img src="photos/placeholder.jpg"><br>Anna Laura Suarez</a></div>
 </div>
 
 <h1 class="theory">Past members</h1>
 
 <div class="photos">
-	<div><a href="https://kam.mff.cuni.cz/~jaklt/"><img src="photos/jakl.jpg"></a><br>Tomáš Jakl</div>
-	<div><a href="https://www.cs.bham.ac.uk/~cmk497/"><img src="photos/knapp.jpg"></a><br>Cory Knapp</div>
-	<div><a href=""><img src="photos/jia.jpg"></a><br>Xiaodong Jia</div>
-	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"></a><br>Koko Muroya</div>
+	<div><a href="https://kam.mff.cuni.cz/~jaklt/"><img src="photos/jakl.jpg"><br>Tomáš Jakl</a></div>
+	<div><a href="https://www.cs.bham.ac.uk/~cmk497/"><img src="photos/knapp.jpg"><br>Cory Knapp</a></div>
+	<div><img src="photos/placeholder.jpg"><br>Xiaodong Jia</div>
+	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"><br>Koko Muroya</a></div>
 </div>
