--- a/people.html
+++ b/people.html
@@ -1,4 +1,4 @@
-<h1 class="theory">Staff</h1>
+<h1>Staff</h1>
 
 <div class="photos">
 	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"><br>Benedikt Ahrens</a></div>
@@ -13,7 +13,7 @@
 	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"><br>Noam Zeilberger</a></div>
 </div>
 
-<h1 class="theory">Researchers</h1>
+<h1>Researchers</h1>
 
 <div class="photos">
 	<div><a href="http://www.cs.bham.ac.uk/~devesasm/"><img src="photos/placeholder.jpg"><br>Marco Devesos Campos</a></div>
@@ -21,7 +21,7 @@
 	<div><a href="http://www.cs.bham.ac.uk/~ais523/"><img src="photos/placeholder.jpg"><br>Alex Smith</a></div>
 </div>
 
-<h1 class="theory">Honorary research fellows</h1>
+<h1>Honorary research fellows</h1>
 
 <div class="photos">
 	<div><a href="https://hoelzl.fr/"><img src="photos/holzl.jpg"><br>Rupert Hőlzl</a></div>
@@ -34,7 +34,7 @@
 	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"><br>Steve Vickers</a></div>
 </div>
 
-<h1 class="theory">PhD students</h1>
+<h1>PhD students</h1>
 
 <div class="photos">
 	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/placeholder.jpg"><br>Todd Ambridge</a></div>
@@ -51,7 +51,7 @@
 	<div><a href=""><img src="photos/placeholder.jpg"><br>Anna Laura Suarez</a></div>
 </div>
 
-<h1 class="theory">Past members</h1>
+<h1>Past members</h1>
 
 <div class="photos">
 	<div><a href="https://kam.mff.cuni.cz/~jaklt/"><img src="photos/jakl.jpg"><br>Tomáš Jakl</a></div>
