--- a/overview.html
+++ b/overview.html
@@ -1,3 +1,18 @@
 <h1>Theoretical Computer Science at Birmingham</h1>
 
 <p>We are one of the largest research groups in the world with a focus on the logical foundations of computer science. Much of our work makes use of techniques such as category theory, type theory, topology, domain theory, and game semantics. We apply these tools to deep and conceptual questions in a broad range of areas, including programming languages, automated theorem proving, combinatorics, formal verification, and quantum computation, as well as the foundations of mathematics.</p>
+
+<p>These are some of our current major research areas, with a list of the main group members leading the activity:
+	<ul>
+		<li>Programming languages: Dan Ghica, Achim Jung, Paul Levy, Uday Reddy</li>
+		<li>Verification and model checking: Dave Parker, Eike Ritter</li>
+		<li>Higher category theory: Benedikt Ahrens, Martin Escardo, Eric Finster, Jamie Vicary</li>
+		<li>Homotopy type theory and constructive mathematics: Benedikt Ahrens, Martin Escardo, Eric Finster, Steve Vickers</li>
+		<li>String diagrams and graphical calculi: Dan Ghica, Jamie Vicary</li>
+		<li>Proof assistants: Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Jamie Vicary</li>
+		<li>Topology and domain theory: Achim Jung, Steve Vickers</li>
+		<li>Game semantics: Dan Ghica, Paul Levy</li>
+		<li>Logic and proof theory: Achim Jung, Uday Reddy, Noam Zeilberger</li>
+		<li>Quantum computation: Jamie Vicary</li>
+	</ul>
+</p>
