--- a/overview.html
+++ b/overview.html
@@ -4,15 +4,15 @@
 
 <p>These are some of our current major research areas, with a list of the main group members leading the activity:
 	<ul>
-		<li>Programming languages: Dan Ghica, Achim Jung, Paul Levy, Uday Reddy</li>
-		<li>Verification and model checking: Dave Parker, Eike Ritter</li>
-		<li>Higher category theory: Benedikt Ahrens, Martin Escardo, Eric Finster, Jamie Vicary</li>
-		<li>Homotopy type theory and constructive mathematics: Benedikt Ahrens, Martin Escardo, Eric Finster, Steve Vickers</li>
-		<li>String diagrams and graphical calculi: Dan Ghica, Jamie Vicary</li>
-		<li>Proof assistants: Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Jamie Vicary</li>
-		<li>Topology and domain theory: Achim Jung, Steve Vickers</li>
-		<li>Game semantics: Dan Ghica, Paul Levy</li>
-		<li>Logic and proof theory: Achim Jung, Uday Reddy, Noam Zeilberger</li>
-		<li>Quantum computation: Jamie Vicary</li>
+		<li><i>Programming languages.</i> Dan Ghica, Achim Jung, Paul Levy, Uday Reddy</li>
+		<li><i>Verification and model checking.</i> Dave Parker, Eike Ritter</li>
+		<li><i>Higher category theory.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Jamie Vicary</li>
+		<li><i>Homotopy type theory and constructive mathematics.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Steve Vickers</li>
+		<li><i>String diagrams and graphical calculi.</i> Dan Ghica, Jamie Vicary</li>
+		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Jamie Vicary</li>
+		<li><i>Topology and domain theory.</i> Achim Jung, Steve Vickers</li>
+		<li><i>Game semantics.</i> Dan Ghica, Paul Levy</li>
+		<li><i>Logic and proof theory.</i> Achim Jung, Uday Reddy, Noam Zeilberger</li>
+		<li><i>Quantum computation.</i> Jamie Vicary</li>
 	</ul>
 </p>
