Placeholder for Hayo.

--- a/people.html
+++ b/people.html
@@ -58,5 +58,5 @@
 	<div><a href="https://www.cs.bham.ac.uk/~cmk497/"><img src="photos/knapp.jpg"><br>Cory Knapp</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Xiaodong Jia</div>
 	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"><br>Koko Muroya</a></div>
-	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/thielecke.jpg"><br>Hayo Thielecke</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/placeholder.jpg"><br>Hayo Thielecke</a></div>
 </div>
