--- a/overview.html
+++ b/overview.html
@@ -1,8 +1,8 @@
 <h1>Theoretical Computer Science at Birmingham</h1>
 
-<p>We are one of the largest research groups in the world to focus on the logical foundations of computer science. Much of our work makes use of techniques such as category theory, type theory, topology, domain theory, and game semantics. We apply these tools to deep and conceptual questions in a broad range of areas, including programming languages, automated theorem proving, combinatorics, formal verification, and quantum computation, as well as the foundations of mathematics.</p>
+<p>We are one of the largest research groups in the world to focus on the logical foundations of computer science. Much of our work makes use of techniques such as category theory, type theory, topology, domain theory, and game semantics, which we apply to deep and conceptual questions in a broad range of areas.</p>
 
-<p>These are some of our current major research areas, with a list of the main group members leading the activity:
+<p>These are some of our current research programmes, with a list of the main group members leading each activity:
 	<ul>
 		<li><i>Programming languages.</i> Dan Ghica, Achim Jung, Paul Levy, Uday Reddy</li>
 		<li><i>Verification and model checking.</i> Dave Parker, Eike Ritter</li>
