--- a/people.html
+++ b/people.html
@@ -28,7 +28,7 @@
 	<div><a href="https://paigenorth.github.io/"><img src="photos/placeholder.jpg"><br>Paige North</a></div>
 	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"><br>Valeria de Paiva</a></div>
 	<div><a href="https://www.swansea.ac.uk/staff/science/computer-science/paulya/"><img src="photos/pauly.jpg"><br>Arno Pauly</a></div>
-	<div><a href="https://ni.www.techfak.uni-bielefeld.de/people/maschroe"><img src="photos/schroder.jpg"><br>Matthias Schrőder</a></div>
+	<div><img src="photos/placeholder.jpg"><br>Matthias Schrőder</div>
 	<div><a href="https://floriansteinberg.github.io/"><img src="photos/steinberg.jpg"><br>Florian Steinberg</a></div>
 	<div><a href="https://www.paultaylor.eu/"><img src="photos/taylor.jpg"><br>Paul Taylor</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"><br>Steve Vickers</a></div>
@@ -54,9 +54,17 @@
 <h1>Past members</h1>
 
 <div class="photos">
+	<div><a href="https://www.nottingham.ac.uk/computerscience/people/natasha.alechina"><img src="photos/alechina.jpg"><br>Natasha Alechina</a></div>
+	<div><a href="http://www.di.unito.it/~bono/index.html"><img src="photos/bono.jpg"><br>Viviana Bono</a></div>
+	<div><a href="https://personal.cis.strath.ac.uk/neil.ghani/"><img src="photos/ghani.jpg"><br>Neil Ghani</a></div>
 	<div><a href="https://kam.mff.cuni.cz/~jaklt/"><img src="photos/jakl.jpg"><br>Tomáš Jakl</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Xiaodong Jia</div>
+	<div><img src="photos/placeholder.jpg"><br>Mathias Kegelmann</div>
 	<div><a href="https://www.cs.bham.ac.uk/~cmk497/"><img src="photos/knapp.jpg"><br>Cory Knapp</a></div>
+	<div><a href="https://www.cl.cam.ac.uk/~nk480/"><img src="photos/krishnaswami.jpg"><br>Neel Krishnaswami</a></div>
+	<div><a href="http://www.cs.ox.ac.uk/marta.kwiatkowska/"><img src="photos/kwiatkowska.jpg"><br>Marta Kwiatkowska</a></div>
+	<div><a href="https://www.math.unipd.it/~maietti/"><img src="photos/placeholder.jpg"><br>Milli Maietti</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"><br>Koko Muroya</a></div>
+	<div><a href="http://www.cs.man.ac.uk/~schalk/"><img src="photos/placeholder.jpg"><br>Andrea Schalk</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/placeholder.jpg"><br>Hayo Thielecke</a></div>
 </div>
