Added Aaron Sloman as honorary research fellow

--- a/people.html
+++ b/people.html
@@ -29,6 +29,7 @@
 	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"><br>Valeria de Paiva</a></div>
 	<div><a href="https://www.swansea.ac.uk/staff/science/computer-science/paulya/"><img src="photos/pauly.jpg"><br>Arno Pauly</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Matthias Schrőder</div>
+	<div><a href="https://www.cs.bham.ac.uk/~axs/"><img src="photos/sloman.jpg"><br>Aaron Sloman</a></div>
 	<div><a href="https://floriansteinberg.github.io/"><img src="photos/steinberg.jpg"><br>Florian Steinberg</a></div>
 	<div><a href="https://www.paultaylor.eu/"><img src="photos/taylor.jpg"><br>Paul Taylor</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~sjv"><img src="photos/vickers.jpg"><br>Steve Vickers</a></div>
