--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@
 	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/placeholder.jpg"><br>Yuning Feng</a></div>
 	<div><a href="https://bram.xyz/blog/"><img src="photos/geron.jpg"><br>Bram Geron</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.png"><br>Tom Goodman</a></div>
-	<div><a href="https://www.cs.bham.ac.uk/~sxh617/"><img src="photos/placeholder.jpg"><br>Sina Hazratpour</a></div>
+	<div><a href="https://sinhp.github.io/"><img src="photos/sina.jpg"><br>Sina Hazratpour</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/people/Ming%20Ng"><img src="photos/placeholder.jpg"><br>Ming Ng</a></div>
 	<div><a href=""><img src="photos/placeholder.jpg"><br>Anna Laura Suarez</a></div>
