--- a/people.html
+++ b/people.html
@@ -48,7 +48,7 @@
 	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.png"><br>Tom Goodman</a></div>
 	<div><a href="https://sinhp.github.io/"><img src="photos/sina.jpg"><br>Sina Hazratpour</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
-	<div><a href="https://www.cs.bham.ac.uk/people/Ming%20Ng"><img src="photos/ng.png"><br>Ming Ng</a></div>
+	<div><img src="photos/ng.png"><br>Ming Ng</div>
 	<div><a href=""><img src="photos/placeholder.jpg"><br>Anna Laura Suarez</a></div>
 </div>
 
