--- a/updating.html
+++ b/updating.html
@@ -1,3 +1,3 @@
 <h1>Updating this page</h1>
 
-This page can be updated by issuing a pull request to the GitHub repository <a href="http://github.com/jamievicary/birmingham-theory">http://github.com/jamievicary/birmingham-theory</a>, or contacting the maintainer <a href="http://www.cs.bham.ac.uk/~vicaryjo/">Jamie Vicary</a>.
+<p>This page can be updated by issuing a pull request to the GitHub repository <a href="http://github.com/jamievicary/birmingham-theory">http://github.com/jamievicary/birmingham-theory</a>, or contacting the maintainer <a href="http://www.cs.bham.ac.uk/~vicaryjo/">Jamie Vicary</a>.</p>
