Added Maietti photo

--- a/people.html
+++ b/people.html
@@ -64,7 +64,7 @@
 	<div><a href="https://www.cs.bham.ac.uk/~cmk497/"><img src="photos/knapp.jpg"><br>Cory Knapp</a></div>
 	<div><a href="https://www.cl.cam.ac.uk/~nk480/"><img src="photos/krishnaswami.jpg"><br>Neel Krishnaswami</a></div>
 	<div><a href="http://www.cs.ox.ac.uk/marta.kwiatkowska/"><img src="photos/kwiatkowska.jpg"><br>Marta Kwiatkowska</a></div>
-	<div><a href="https://www.math.unipd.it/~maietti/"><img src="photos/placeholder.jpg"><br>Milly Maietti</a></div>
+	<div><a href="https://www.math.unipd.it/~maietti/"><img src="photos/maietti.jpg"><br>Milly Maietti</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"><br>Koko Muroya</a></div>
 	<div><a href="http://www.cs.man.ac.uk/~schalk/"><img src="photos/placeholder.jpg"><br>Andrea Schalk</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/placeholder.jpg"><br>Hayo Thielecke</a></div>
