Added Philosophy of Computation

--- a/overview.html
+++ b/overview.html
@@ -14,5 +14,6 @@
 		<li><i>Game semantics.</i> Dan Ghica, Paul Levy</li>
 		<li><i>Logic and proof theory.</i> Achim Jung, Uday Reddy, Noam Zeilberger</li>
 		<li><i>Quantum computation.</i> Jamie Vicary</li>
+		<li><i>Philosophy of computation.</i> Achim Jung and Aaron Sloman</li>
 	</ul>
 </p>
