Added Yuning Feng photograph

--- a/people.html
+++ b/people.html
@@ -43,7 +43,7 @@
 	<div><img src="photos/placeholder.jpg"><br>Nicolas Blanco</div>
 	<div><a href="http://www.cs.bham.ac.uk/~abb538/"><img src="photos/placeholder.jpg"><br>Auke Booij</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~wtc488/"><img src="photos/placeholder.jpg"><br>Steven Cheung</a></div>
-	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/placeholder.jpg"><br>Yuning Feng</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/feng.jpg"><br>Yuning Feng</a></div>
 	<div><a href="https://bram.xyz/blog/"><img src="photos/geron.jpg"><br>Bram Geron</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.png"><br>Tom Goodman</a></div>
 	<div><a href="https://sinhp.github.io/"><img src="photos/sina.jpg"><br>Sina Hazratpour</a></div>
