Added Todd's photo

--- a/people.html
+++ b/people.html
@@ -38,7 +38,7 @@
 <h1>PhD students</h1>
 
 <div class="photos">
-	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/placeholder.jpg"><br>Todd Ambridge</a></div>
+	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/ambridge.jpg"><br>Todd Ambridge</a></div>
 	<div><a href="http://www.rntz.net/"><img src="photos/placeholder.jpg"><br>Michael Arntzenius</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Nicolas Blanco</div>
 	<div><a href="http://www.cs.bham.ac.uk/~abb538/"><img src="photos/placeholder.jpg"><br>Auke Booij</a></div>
