Added Heckmann, Hermida, Smyth

--- a/people.html
+++ b/people.html
@@ -24,6 +24,7 @@
 <h1>Honorary research fellows</h1>
 
 <div class="photos">
+	<div><a href="https://scholar.google.co.uk/citations?user=8cqzaKkAAAAJ&hl=en"><img src="photos/hermida.jpg"><br>Claudio Hermida</a></div>
 	<div><a href="https://hoelzl.fr/"><img src="photos/holzl.jpg"><br>Rupert Hőlzl</a></div>
 	<div><a href="https://paigenorth.github.io/"><img src="photos/placeholder.jpg"><br>Paige North</a></div>
 	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"><br>Valeria de Paiva</a></div>
@@ -47,6 +48,7 @@
 	<div><a href="https://bram.xyz/blog/"><img src="photos/geron.jpg"><br>Bram Geron</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.png"><br>Tom Goodman</a></div>
 	<div><a href="https://sinhp.github.io/"><img src="photos/sina.jpg"><br>Sina Hazratpour</a></div>
+	<div><a href="http://www.rw.cdl.uni-saarland.de/users/heckmann/heckmann.html"><img src="photos/heckmann.jpg"><br>Reinhold Heckmann</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
 	<div><img src="photos/ng.png"><br>Ming Ng</div>
 	<div><img src="photos/suarez.png"><br>Anna Laura Suarez</div>
@@ -58,6 +60,7 @@
 	<div><a href="https://www.nottingham.ac.uk/computerscience/people/natasha.alechina"><img src="photos/alechina.jpg"><br>Natasha Alechina</a></div>
 	<div><a href="http://www.di.unito.it/~bono/index.html"><img src="photos/bono.jpg"><br>Viviana Bono</a></div>
 	<div><a href="https://personal.cis.strath.ac.uk/neil.ghani/"><img src="photos/ghani.jpg"><br>Neil Ghani</a></div>
+	<div><a href="http://www.rw.cdl.uni-saarland.de/users/heckmann/heckmann.html"><img src="photos/heckmann.jpg"><br>Reinhold Heckmann</a></div>
 	<div><a href="https://kam.mff.cuni.cz/~jaklt/"><img src="photos/jakl.jpg"><br>Tomáš Jakl</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Xiaodong Jia</div>
 	<div><img src="photos/placeholder.jpg"><br>Mathias Kegelmann</div>
@@ -67,5 +70,6 @@
 	<div><a href="https://www.math.unipd.it/~maietti/"><img src="photos/maietti.jpg"><br>Milly Maietti</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"><br>Koko Muroya</a></div>
 	<div><a href="http://www.cs.man.ac.uk/~schalk/"><img src="photos/placeholder.jpg"><br>Andrea Schalk</a></div>
+	<div><a href="https://www.napier.ac.uk/people/michael-smyth"><img src="photos/smyth.jpg"><br>Michael Smyth</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/placeholder.jpg"><br>Hayo Thielecke</a></div>
 </div>
