--- a/people.html
+++ b/people.html
@@ -70,6 +70,6 @@
 	<div><a href="https://www.math.unipd.it/~maietti/"><img src="photos/maietti.jpg"><br>Milly Maietti</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"><br>Koko Muroya</a></div>
 	<div><a href="http://www.cs.man.ac.uk/~schalk/"><img src="photos/placeholder.jpg"><br>Andrea Schalk</a></div>
-	<div><a href="https://www.napier.ac.uk/people/michael-smyth"><img src="photos/smyth.jpg"><br>Michael Smyth</a></div>
+	<div><img src="photos/placeholder.jpg"><br>Michael Smyth</div>
 	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/placeholder.jpg"><br>Hayo Thielecke</a></div>
 </div>
