Photo for Thielecke

--- a/people.html
+++ b/people.html
@@ -71,5 +71,5 @@
 	<div><a href="http://www.cs.bham.ac.uk/~kxm538/"><img src="photos/muroya.jpg"><br>Koko Muroya</a></div>
 	<div><a href="http://www.cs.man.ac.uk/~schalk/"><img src="photos/placeholder.jpg"><br>Andrea Schalk</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Michael Smyth</div>
-	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/placeholder.jpg"><br>Hayo Thielecke</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/thielecke.jpg"><br>Hayo Thielecke</a></div>
 </div>
