add photo North

--- a/people.html
+++ b/people.html
@@ -26,7 +26,7 @@
 <div class="photos">
 	<div><a href="https://scholar.google.co.uk/citations?user=8cqzaKkAAAAJ&hl=en"><img src="photos/hermida.jpg"><br>Claudio Hermida</a></div>
 	<div><a href="https://hoelzl.fr/"><img src="photos/holzl.jpg"><br>Rupert Hőlzl</a></div>
-	<div><a href="https://paigenorth.github.io/"><img src="photos/placeholder.jpg"><br>Paige North</a></div>
+	<div><a href="https://paigenorth.github.io/"><img src="photos/north.jpg"><br>Paige North</a></div>
 	<div><a href="http://www.valeriadepaiva.org/"><img src="photos/paiva.jpg"><br>Valeria de Paiva</a></div>
 	<div><a href="https://www.swansea.ac.uk/staff/science/computer-science/paulya/"><img src="photos/pauly.jpg"><br>Arno Pauly</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Matthias Schrőder</div>
