--- a/people.html
+++ b/people.html
@@ -50,7 +50,7 @@
 	<div><a href="https://sinhp.github.io/"><img src="photos/sina.jpg"><br>Sina Hazratpour</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
 	<div><img src="photos/ng.png"><br>Ming Ng</div>
-	<div><img src="photos/suarez.png"><br>Anna Laura Suarez</div>
+	<div><a href="http://www.cs.bham.ac.uk/~axs1431/"><img src="photos/suarez.png"><br>Anna Laura Suarez</a></div>
 </div>
 
 <h1>Past members</h1>
