--- a/people.html
+++ b/people.html
@@ -41,7 +41,7 @@
 <div class="photos">
 	<div><a href="https://www.cs.bham.ac.uk/~txw467/"><img src="photos/ambridge.png"><br>Todd Waugh Ambridge</a></div>
 	<div><a href="http://www.rntz.net/"><img src="photos/placeholder.jpg"><br>Michael Arntzenius</a></div>
-	<div><img src="photos/placeholder.jpg"><br>Nicolas Blanco</div>
+	<div><a href="https://nicolas-blanco.github.io/"><img src="photos/blanco.jpg"><br>Nicolas Blanco</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~abb538/"><img src="photos/placeholder.jpg"><br>Auke Booij</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~wtc488/"><img src="photos/placeholder.jpg"><br>Steven Cheung</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~yxf566/"><img src="photos/feng.jpg"><br>Yuning Feng</a></div>
