--- a/people.html
+++ b/people.html
@@ -7,6 +7,7 @@
 	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"><br>Achim Jung</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~pbl"><img src="photos/levy.jpg"><br>Paul Levy</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~parkerdx/"><img src="photos/parker.jpg"><br>Dave Parker</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~rahliv/"><img src="photos/rahli.jpg"><br>Vincent Rahli</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"><br>Uday Reddy</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/ritter.jpg"><br>Eike Ritter</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"><br>Jamie Vicary</a></div>
