--- a/overview.html
+++ b/overview.html
@@ -4,12 +4,12 @@
 
 <p>These are some of our current research programmes, with a list of the main group members leading each activity:
 	<ul>
-		<li><i>Programming languages.</i> Dan Ghica, Achim Jung, Paul Levy, Uday Reddy, Noam Zeilberger</li>
-		<li><i>Verification and model checking.</i> Dave Parker, Eike Ritter</li>
+		<li><i>Programming languages.</i> Dan Ghica, Achim Jung, Paul Levy, Vincent Rahli, Uday Reddy, Noam Zeilberger</li>
+		<li><i>Verification and model checking.</i> Dave Parker, Vincent Rahli, Eike Ritter</li>
 		<li><i>Higher category theory.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Jamie Vicary</li>
 		<li><i>Homotopy type theory and constructive mathematics.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Steve Vickers</li>
 		<li><i>String diagrams and graphical calculi.</i> Dan Ghica, Jamie Vicary, Noam Zeilberger</li>
-		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Jamie Vicary</li>
+		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Vincent Rahli, Jamie Vicary</li>
 		<li><i>Topology and domain theory.</i> Achim Jung, Steve Vickers</li>
 		<li><i>Game semantics.</i> Dan Ghica, Paul Levy</li>
 		<li><i>Logic and proof theory.</i> Achim Jung, Uday Reddy, Noam Zeilberger</li>
