--- a/people.html
+++ b/people.html
@@ -2,6 +2,7 @@
 
 <div class="photos">
 	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"><br>Benedikt Ahrens</a></div>
+	<div><a href="https://www.birmingham.ac.uk/staff/profiles/computer-science/backens-miriam.aspx"><img src="photos/backens.jpg"><br>Miriam Backens</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"><br>Martin Escardo</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"><br>Dan Ghica</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"><br>Achim Jung</a></div>
