--- a/people.html
+++ b/people.html
@@ -51,7 +51,7 @@
 	<div><a href="https://www.cs.bham.ac.uk/~txg523/"><img src="photos/goodman.png"><br>Tom Goodman</a></div>
 	<div><a href="https://sinhp.github.io/"><img src="photos/sina.jpg"><br>Sina Hazratpour</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
-	<div><img src="photos/ng.png"><br>Ming Ng</div>
+	<div><img src="photos/ng.jpg"><br>Ming Ng</div>
 	<div><a href="http://www.cs.bham.ac.uk/~axs1431/"><img src="photos/suarez.png"><br>Anna Laura Suarez</a></div>
 </div>
 
