--- a/overview.html
+++ b/overview.html
@@ -8,12 +8,13 @@
 		<li><i>Verification and model checking.</i> Dave Parker, Vincent Rahli, Eike Ritter</li>
 		<li><i>Higher category theory.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Jamie Vicary</li>
 		<li><i>Homotopy type theory and constructive mathematics.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Steve Vickers</li>
-		<li><i>String diagrams and graphical calculi.</i> Dan Ghica, Jamie Vicary, Noam Zeilberger</li>
+		<li><i>String diagrams and graphical calculi.</i> Miriam Backens, Dan Ghica, Jamie Vicary, Noam Zeilberger</li>
 		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Vincent Rahli, Jamie Vicary</li>
 		<li><i>Topology and domain theory.</i> Achim Jung, Steve Vickers</li>
 		<li><i>Game semantics.</i> Dan Ghica, Paul Levy</li>
 		<li><i>Logic and proof theory.</i> Achim Jung, Uday Reddy, Noam Zeilberger</li>
-		<li><i>Quantum computation.</i> Jamie Vicary</li>
+		<li><i>Quantum computation.</i> Miriam Backens, Jamie Vicary</li>
 		<li><i>Philosophy of computation.</i> Achim Jung and Aaron Sloman</li>
+		<li><i>Computational complexity of counting.</i> Miriam Backens</li>
 	</ul>
 </p>
