Add myself to theory group

--- a/people.html
+++ b/people.html
@@ -6,6 +6,7 @@
 	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"><br>Martin Escardo</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"><br>Dan Ghica</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~axj"><img src="photos/jung.jpg"><br>Achim Jung</a></div>
+	<div><img src="photos/kraus.jpg"><br>Nicolai Kraus</div>
 	<div><a href="http://www.cs.bham.ac.uk/~pbl"><img src="photos/levy.jpg"><br>Paul Levy</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~parkerdx/"><img src="photos/parker.jpg"><br>Dave Parker</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~rahliv/"><img src="photos/rahli.jpg"><br>Vincent Rahli</a></div>
