Mailing list info

--- a/events.html
+++ b/events.html
@@ -2,9 +2,16 @@
 
 <p>The group organizes many regular events.</p>
 <ul>
-	<li>Our regular <a href="http://talks.bham.ac.uk/show/index/86">theoretical computer science seminar series</a> takes place on Fridays during term, hosting distinguished visiting researchers from around the world.</li>
+	<li>Our regular <a href="http://talks.bham.ac.uk/show/index/86">theoretical computer science seminar series</a> takes place on Fridays during term, hosting distinguished visiting researchers from around the world. Everyone is welcome to attend.</li>
 	<li>An informal weekly <a href="http://talks.bham.ac.uk/show/index/41">lab lunch</a> gives a venue for both visitors and group members to present recent work.</li>
 	<li>We are one of the main organizers of the annual <a href="http://www.cs.nott.ac.uk/MGS/">Midland Graduate School in the Foundations of Computing Science</a>.</li>
 	<li>We are core members of the <a href="https://www2.le.ac.uk/departments/mathematics/extranet/staff-material/staff-profiles/simona-paoli/yorkshire-and-midlands-category-theory-seminar-yamcats">Yorkshire and Midlands Category Theory Seminar (YAMCATS)</a>.</li>
 	<li>The <a href="http://www.cs.bham.ac.uk/research/seminars/departmental">department seminar series</a> often hosts talks on theoretical topics.</li>
 </ul>
+
+<h1>Mailing lists</h1>
+
+<p>To receive automatic seminar announcements by email, sign up at the <a href="http://talks.bham.ac.uk/show/index/86">seminar webpage</a>.</p>
+
+<p>If you are a group member, you may use the <a href="https://mailman.cs.bham.ac.uk/mailman/listinfo/theory">online form</a> to subscribe to the group mailing list.</p>
+
