--- a/events.html
+++ b/events.html
@@ -13,5 +13,5 @@
 
 <p>To receive automatic seminar announcements by email, sign up at the <a href="http://talks.bham.ac.uk/show/index/86">seminar webpage</a>.</p>
 
-<p>If you are a group member, you may use the <a href="https://mailman.cs.bham.ac.uk/mailman/listinfo/theory">online form</a> to subscribe to the group mailing list.</p>
+<p>If you are a group member, you may use the <a href="https://mailman.cs.bham.ac.uk/mailman/listinfo/theory">online form</a> to subscribe to the theory group mailing list.</p>
 
