Added myself to theory group webpage

--- a/people.html
+++ b/people.html
@@ -54,6 +54,7 @@
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
 	<div><img src="photos/ng.jpg"><br>Ming Ng</div>
 	<div><a href="http://www.cs.bham.ac.uk/~axs1431/"><img src="photos/suarez.png"><br>Anna Laura Suarez</a></div>
+	<div><a href="https://calintat.github.io/"><img src="photos/tataru.jpg"><br>Calin Tataru</a></div>
 </div>
 
 <h1>Past members</h1>
