--- a/people.html
+++ b/people.html
@@ -55,6 +55,7 @@
 	<div><a href="https://www.cs.bham.ac.uk/~txd880/"><img src="photos/jong.jpg"><br>Tom de Jong</a></div>
 	<div><a href="https://www.cs.bham.ac.uk/~gjk591/"><img src="photos/kaye.jpg"><br>George Kaye</a></div>
 	<div><img src="photos/ng.jpg"><br>Ming Ng</div>
+	<div><a href="https://www.cs.bham.ac.uk/~axr1014/"><img src="photos/rice.jpg"><br>Alex Rice</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~axs1431/"><img src="photos/suarez.png"><br>Anna Laura Suarez</a></div>
 	<div><a href="https://calintat.github.io/"><img src="photos/tataru.jpg"><br>Calin Tataru</a></div>
 </div>
