--- a/overview.html
+++ b/overview.html
@@ -10,7 +10,7 @@
 		<li><i>Homotopy type theory and constructive mathematics.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Steve Vickers</li>
 		<li><i>String diagrams and graphical calculi.</i> Miriam Backens, Dan Ghica, Jamie Vicary, Noam Zeilberger</li>
 		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Vincent Rahli, Jamie Vicary</li>
-		<li><i>Topology and domain theory.</i> Achim Jung, Steve Vickers</li>
+		<li><i>Topology and domain theory.</i> Martin Escardo, Achim Jung, Steve Vickers</li>
 		<li><i>Game semantics.</i> Dan Ghica, Paul Levy</li>
 		<li><i>Logic and proof theory.</i> Achim Jung, Uday Reddy, Noam Zeilberger</li>
 		<li><i>Quantum computation.</i> Miriam Backens, Jamie Vicary</li>
