--- a/overview.html
+++ b/overview.html
@@ -16,5 +16,6 @@
 		<li><i>Quantum computation.</i> Miriam Backens, Jamie Vicary</li>
 		<li><i>Philosophy of computation.</i> Achim Jung and Aaron Sloman</li>
 		<li><i>Computational complexity of counting.</i> Miriam Backens</li>
+		<li><i>Graph algorithms and complexity, streaming algorithms, FPT algorithms.</i> Rajesh Chitnis</li>
 	</ul>
 </p>
