--- a/people.html
+++ b/people.html
@@ -1,8 +1,9 @@
-<h1>Staff</h1>
+﻿<h1>Staff</h1>
 
 <div class="photos">
 	<div><a href="http://www.cs.bham.ac.uk/~ahrensb"><img src="photos/ahrens.jpg"><br>Benedikt Ahrens</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~backensm/"><img src="photos/backens.jpg"><br>Miriam Backens</a></div>
+	<div><a href="https://rajeshchitnis.github.io/"><img src="photos/chitnis.jpg"><br>Rajesh Chitnis</a></div>	
 	<div><a href="http://www.anupamdas.com/"><img src="photos/das.jpg"><br>Anupam Das</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~mhe"><img src="photos/escardo.jpg"><br>Martin Escardo</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~drg"><img src="photos/ghica.jpg"><br>Dan Ghica</a></div>
