Simplified some of the research areas

--- a/overview.html
+++ b/overview.html
@@ -15,7 +15,7 @@
 		<li><i>Logic and proof theory.</i> Achim Jung, Uday Reddy, Noam Zeilberger</li>
 		<li><i>Quantum computation.</i> Miriam Backens, Jamie Vicary</li>
 		<li><i>Philosophy of computation.</i> Achim Jung and Aaron Sloman</li>
-		<li><i>Computational complexity of counting.</i> Miriam Backens</li>
-		<li><i>Graph algorithms and complexity, streaming algorithms, FPT algorithms.</i> Rajesh Chitnis</li>
+		<li><i>Computational complexity.</i> Miriam Backens, Rajesh Chitnis and Anupam Das.</li>
+		<li><i>Algorithmics.</i> Rajesh Chitnis and Anupam Das.</li>
 	</ul>
 </p>
