consolidated algorithms and complexity, added Anupam to proof theory

--- a/overview.html
+++ b/overview.html
@@ -12,10 +12,10 @@
 		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Nicolai Kraus, Vincent Rahli, Jamie Vicary</li>
 		<li><i>Topology and domain theory.</i> Martin Escardo, Achim Jung, Steve Vickers</li>
 		<li><i>Game semantics.</i> Dan Ghica, Paul Levy</li>
-		<li><i>Logic and proof theory.</i> Achim Jung, Uday Reddy, Noam Zeilberger</li>
+		<li><i>Proof theory and logic.</i> Anupam Das, Achim Jung, Uday Reddy, Noam Zeilberger</li>
 		<li><i>Quantum computation.</i> Miriam Backens, Jamie Vicary</li>
-		<li><i>Philosophy of computation.</i> Achim Jung and Aaron Sloman</li>
-		<li><i>Computational complexity.</i> Miriam Backens, Rajesh Chitnis and Anupam Das.</li>
-		<li><i>Algorithmics.</i> Rajesh Chitnis and Anupam Das.</li>
+		<li><i>Philosophy of computation.</i> Anupam Das, Achim Jung and Aaron Sloman</li>
+		<li><i>Algorithms and complexity.</i> Miriam Backens, Rajesh Chitnis and Anupam Das.</li>
+		<!-- <li><i>Algorithmics.</i> Rajesh Chitnis and Anupam Das.</li> -->
 	</ul>
 </p>
